<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@drawable/input_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:background="@drawable/dg_bg"/>


    <ImageView
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="140dp"
        android:src="@drawable/cricle_shape"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="140dp"
         />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="164dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="153dp"
        android:src="@drawable/lu" />

    <TextView
        android:id="@+id/login"
        android:layout_width="186sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:textColor="@color/black"
        android:layout_marginTop="35sp"
        android:layout_marginEnd="100sp"
        android:gravity="center"
        android:text="Login"
        android:textSize="30sp"
        android:textStyle="bold" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginStart="10dp"
        app:startIconTint="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerInParent="true"
        app:startIconDrawable="@drawable/u_icon"

        android:textColorHint="@color/black"
        app:endIconMode="clear_text"
        >
        <!--        tools:layout_editor_absoluteX="1"-->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Uname"
            android:hint="@string/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="360sp"
        android:layout_marginEnd="10dp"
        android:hint="@string/password_login"
        android:textColorHint="@color/black"
        app:endIconMode="password_toggle"
        app:startIconTint="@color/black"
        app:startIconDrawable="@drawable/word">
        <!--        tools:layout_editor_absoluteX="1"-->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Upass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgetpaw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:text="@string/forgot_password"
        android:textColor="@color/sky"
        android:textSize="15sp" />

    <Button
        android:id="@+id/log"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="460sp"
        android:layout_marginEnd="139dp"
        android:backgroundTint="@color/orange"
        android:text="@string/login"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/don_t_have_"
            android:layout_width="153dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2sp"
            android:gravity="center"
            android:text="@string/don_t_have"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sign"
            android:layout_width="77dp"
            android:layout_height="match_parent"
            android:text="@string/text_sign_up"
            android:textColor="@color/sky"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>