<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/input_bg"
    tools:context=".SignUp">



    <!--     android:onClick="myFancyMethod"-->
    <!--<TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@drawable/input_bg" />-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:background="@drawable/dg_bg" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="186sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="123dp"
            android:layout_marginTop="57dp"
            android:layout_marginEnd="77dp"
            android:gravity="center"
            android:text="@string/text_sign_up"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ImageView
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="140dp"
        android:src="@drawable/cricle_shape"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="157dp"
        android:src="@drawable/su" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="270sp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullnameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColorHint="@color/black"
            app:endIconMode="clear_text"
            app:errorEnabled="true">
            <!--        tools:layout_editor_absoluteX="1"-->

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/fullname"
                android:hint="@string/full_name"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--<com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginTop="5sp"
            android:hint="@string/last"
            android:textColorHint="@color/black">
            &lt;!&ndash;        tools:layout_editor_absoluteX="1"&ndash;&gt;

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

-->

        <!-- email and Phone no -->


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:textColorHint="@color/black"
            app:endIconMode="clear_text"
            app:errorEnabled="true">
            <!--        tools:layout_editor_absoluteX="1"
            app:placeholderText="Enter Correct Email" -->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:hint="@string/email_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- phone-number -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phonenoLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1sp"
            android:layout_marginEnd="10dp"

            android:textColorHint="@color/black"
            app:counterEnabled="true"

            app:counterMaxLength="10"
            app:endIconMode="clear_text"
            app:errorEnabled="true">
            <!--        tools:layout_editor_absoluteX="1"-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneno"
                android:layout_width="match_parent"
                android:hint="@string/phone"
                android:layout_height="match_parent"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1sp"
            android:layout_marginEnd="10dp"
            android:textColorHint="@color/black"
            app:counterEnabled="true"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="#009688">
            <!--app:helperText="Enter Strong Password"-->
            <!--        tools:layout_editor_absoluteX="1"-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password_login"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/conpLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1sp"
            android:layout_marginEnd="10dp"
            android:textColorHint="@color/black"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">
            <!--        tools:layout_editor_absoluteX="1"-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/conp"
                android:hint="@string/confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/signup12"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="615dp"
        android:layout_marginEnd="139dp"
        android:backgroundTint="@color/orange"
        android:text="@string/text_sign_up"
        android:textColor="@color/white" />

</RelativeLayout>

